# CognOS

./: .gitignore  pyproject.toml
data/: synthetic_events.csv  title_pairs_eval.csv
docs/: ML_DATASET.md  feature_impact_day11.txt
models/: metrics.json  metrics_day6_baseline.json  suggestion_classifier.joblib
scripts/: compare_feature_impact.py  diagnose_gate.py  evaluate_change_detection.py  generate_training_data.py  train_classifier.py
src/cogn_os/: cli.py  config.py
src/cogn_os/capture/: types.py  (+2 more)
tests/: conftest.py  test_anthropic_provider.py  test_app_category.py  test_cached_embedding_provider.py  test_capture_loop.py  test_capture_types.py  test_change_detector.py  test_clock.py  test_config.py  test_context_builder.py  test_context_tracker.py  test_dataset.py  test_evaluate.py  test_evaluate_change_detection.py  test_event_repository.py  test_fake_embedding_provider.py  test_fake_screenshotter.py  test_fake_suggestion_gate.py  test_feature_extractor.py  test_feature_log_repository.py  test_features_schema.py  test_filters.py  test_generate_training_data.py  test_ml_gated_loop.py  test_model_suggestion_gate.py  test_ocr_observer.py  test_ollama_provider.py  test_orchestrator.py  test_orchestrator_ocr_fix.py  test_pil_screenshotter.py  test_plugin_events.py  test_plugin_integration.py  test_plugin_registry.py  test_privacy_filter.py  test_reasoning_wiring.py  test_retrain.py  test_screenshot_repository.py  test_screenshot_types.py  test_sentence_transformer_provider.py  test_similarity.py  (+8 more)
tests/fixtures/: make_fixture_image.py  make_ocr_fixture.py
(+49 files in other folders)
