[project]
name = "cognos"
version = "0.1.0"
description = "A local-first desktop activity assistant: watches active window/app usage and surfaces occasional LLM-generated suggestions."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "typer>=0.12.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
windows = [
    "pygetwindow>=0.0.9",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "win10toast>=0.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
cognos = "cogn_os.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]